Editor: fix dialogs overflow on small screens (#11075)
Fixed an issue where HTML toolbar dialogs couldn't be scrolled if their content was longer than the screen height.

--- a/client/post-editor/editor-html-toolbar/style.scss
+++ b/client/post-editor/editor-html-toolbar/style.scss
@@ -66,17 +66,22 @@
 	color: lighten( $gray, 30% );
 }
 
-.editor-html-toolbar__dialog .dialog__content {
-	min-width: 40vw;
-}
-.editor-html-toolbar__dialog .post-selector {
-	margin-bottom: 16px;
-}
-@include breakpoint( "<660px" ) {
-	.editor-html-toolbar__dialog {
-		width: 90%;
+.editor-html-toolbar__dialog {
+	max-height: 90%;
+	overflow-y: auto;
+
+	.dialog__content {
+		min-width: 40vw;
 	}
-	.editor-html-toolbar__dialog .dialog__content {
-		min-width: none;
+	.post-selector {
+		margin-bottom: 16px;
+	}
+
+	@include breakpoint( "<660px" ) {
+		width: 90%;
+
+		.dialog__content {
+			min-width: none;
+		}
 	}
 }
